# weatherlogger

./: Cargo.toml  README.md
config/: config.toml
scripts/: deploy.sh
src/: errors.rs  handlers.rs  initialization.rs  logging.rs  main.rs  manager_forecast.rs  manager_temperature.rs  perceived_temperature.rs
src/manager_db/: errors.rs  mod.rs  models.rs
src/manager_smhi/: errors.rs  mod.rs  models.rs
systemd/: README.md  start.sh  weatherlogger.service
