[package]
name = "weatherlogger"
version = "0.6.4"
edition = "2021"

[dependencies]
actix-web = "4.12"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.16", features = ["chrono_0_4"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
chrono ="0.4"
log4rs = "1.3"
log = "0.4"
toml = "0.9"
reqwest = "0.12"
