[package]
name = "weatherlogger"
version = "0.8.3"
edition = "2021"

[dependencies]
axum = "0.8"
axum-server = "0.8"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
log4rs = "1.3"
log = "0.4"
toml = "0.9"
reqwest = "0.13"
